Update CZERTAINLY Dependencies (#938)